# ares_2024_r2

./: .clang-tidy  .gitignore  README.md  make_cache_directoty.sh  test_launch.sh
.cache/clangd/index/: crc.cpp.F9B5938FCC5AE9D6.idx  crc.hpp.DB1176440FC71298.idx  detector.cpp.AEA9EBCF59E322A3.idx  detector.hpp.CE020FDDF070DC4E.idx  detector_node.cpp.5DFC046C2E3F9214.idx  detector_node.hpp.D7ABB73DA968E514.idx  packet.hpp.09A8A87F296A75DD.idx  rc_serial_driver.cpp.60A5091BAA839097.idx  rc_serial_driver.hpp.8CFC2F0B072ACD53.idx
src/: README.md  letsgo.sh  test_launch.sh
src/.devcontainer/: Dockerfile  devcontainer.json
src/CV_test/: CMakeCache.txt  CMakeLists.txt  ImageShow  Makefile  SIMD  SIMD02  Test  Test02  cmake_install.cmake  cv_split  cv_split.cpp  hello  image_raw.xmind  main.cpp  simd.cpp  simd02.cpp  test_launch.sh  test_yolov8.py  testsplitmax  testsplitmax.cpp
src/armor_detector/: CMakeLists.txt  README.md  package.xml  position_sol.md
src/armor_detector/config/: detector.yaml  visualize.rviz
src/armor_detector/docs/: detector.cpp  detector.hpp
src/armor_detector/include/armor_detector/: common.hpp  detector.hpp  detector_node.hpp  inferencer.h  inferencer_node.hpp  projection_node.hpp  yolov8.hpp
src/armor_detector/launch/: detector.launch.py
src/armor_detector/src/: carry_state_node.cpp  detector.cpp  detector_node.cpp  inferencer.cpp  inferencer_node.cpp  projection_node.cpp
src/auto_aim_interfaces/: CMakeLists.txt  package.xml
src/auto_aim_interfaces/msg/: Target.msg  Targets.msg
src/ball_detect/: README.md  detect.cpp
src/rc_decision/: CMakeLists.txt  README.md  package.xml
src/rc_decision/include/rc_decision/: rim_state.hpp
src/rc_decision/msg/: Rimstate.msg
src/rc_decision/src/: rim_state.cpp
src/rc_detector/: CMakeLists.txt  README.md  package.xml
src/rc_detector/config/: detector.yaml  extrinsic.yaml
src/rc_detector/docs/: README.md  detector.cpp  detector.hpp
src/rc_detector/include/rc_detector/: inferencer.h  inferencer_node.hpp  projection_node.hpp  yolov8.hpp
src/rc_detector/launch/: detector.launch.py
src/rc_detector/src/: inferencer.cpp  inferencer_node.cpp  projection_node.cpp
src/rc_serial_driver/: CMakeLists.txt  package.xml
src/rc_serial_driver/config/: serial_driver.yaml
src/rc_serial_driver/include/rc_serial_driver/: packet.hpp  rc_serial_driver.hpp
src/rc_serial_driver/launch/: serial_driver.launch.py
src/rc_serial_driver/src/: a.out  crc.cpp  rc_serial_driver.cpp  test.cpp  test_struct.cpp
src/rc_usb_camera/: CMakeLists.txt  package.xml
src/rc_usb_camera/config/: cam_intrinsic_para.yaml
src/rc_usb_camera/launch/: usb_camera.launch.py
src/rc_vision_bringup/: CMakeLists.txt  package.xml
src/rc_vision_bringup/config/: node_params.yaml  realsense.yaml  v4l2.yaml
src/rc_vision_bringup/docs/: test_com_node_launch.py
src/rc_vision_bringup/launch/: test_com_node_launch.py  vision_bringup.launch.py
src/ros2_v4l2_camera/: CMakeLists.txt
src/ros2_v4l2_camera/config/: README.md  camera_params.yaml
src/ros2_v4l2_camera/launch/: v4l2_camera.launch.py
src/ros2_v4l2_camera/src/: v4l2_camera.cpp
src/yolov8_ros/yolov8_bringup/: CMakeLists.txt
src/yolov8_ros/yolov8_bringup/config/: yolov8.rviz
src/yolov8_ros/yolov8_bringup/launch/: yolov8.launch.py  yolov8_3d.launch.py
src/yolov8_ros/yolov8_msgs/msg/: KeyPoint3D.msg
src/yolov8_ros/yolov8_ros/yolov8_ros/: tracking_node.py  yolov8_node.py
src/yolov8_ros_cpp/YOLOv8-CPP-Inference/: inference.cpp  inference.h  main.cpp
